--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasm-game-of-life"
+name = "wasm-game-of-life-my-dawchihliou"
 version = "0.1.0"
 authors = ["Daw-Chih Liou <dawochih.liou@gmail.com>"]
 edition = "2018"
@@ -8,7 +8,7 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-default = ["console_error_panic_hook"]
+default = ["wee_alloc", "console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
@@ -36,5 +36,6 @@ features = [
 wasm-bindgen-test = "0.3.13"
 
 [profile.release]
+lto = true
 # Tell `rustc` to optimize for small code size.
-opt-level = "s"
+opt-level = "z"
